# cathode

./: Cargo.toml  README.md  package-lock.json  package.json  svelte.config.js
cathode-tube/: package.json
cathode-tube/src/: App.svelte  style.css
cathode-tube/src-tauri/: Cargo.toml
ray_format/: Cargo.toml
ray_format/src/: archive.rs  lib.rs  model.rs
ray_format/src/test/: mod.rs
src/: App.svelte  style.css
src-svelte/src/: App.svelte  store.ts
src-svelte/src/components/: context.svelte  tube.svelte
src-svelte/src/views/: main.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: audio.rs  fs.rs  main.rs
src/components/: FramePreview.svelte  tube.svelte
src/views/: main.svelte
