[package]
name = "ray_format"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["AnActualEmerald"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
compression = { version = "0.1.5", default-features = false, features = ["gzip"] }
qoi = "0.4.0"
