[package]
name = "ray_format"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["AnActualEmerald"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
log = "0.4.17"
qoi = "0.4.0"
serde = "1.0.144"
serde_json = "1.0.85"
zip = "0.6.2"
