[package]
name = "cathode-tube"
version = "0.0.0"
description = "A Tauri App"
authors = ["AnActualEmerald"]
license = "GPL-3.0-or-later"
repository = "https://github.com/AnActualEmerald/cathode"
edition = "2021"

[workspace]

[build-dependencies]
tauri-build = { version = "1.0.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0", features = ["dialog-all", "fs-create-dir", "fs-read-dir", "fs-read-file", "fs-write-file", "macos-private-api", "window-minimize", "window-set-max-size", "window-set-min-size", "window-unminimize"] }
cpal = { version = "0.14.0", features = ["jack"] }
ray_format = {path = "../ray_format", version = "~0.1.0"}
anyhow = "1.0.63"
log = "0.4.17"
env_logger = "0.9.0"
rand = "0.8.5"
tokio = { version = "1.21.0", features = ["full"] }
image = "0.24.3"
base64-url = "1.4.13"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
